# polyora

./: .gitignore  CMakeLists.txt  ChangeLog.txt  Doxyfile  README.txt
buildtree/: CMakeLists.txt  buildtree.cpp  buildtree.vcproj
cluster_ids/: CMakeLists.txt  cluster_ids.cpp  cluster_ids.vcproj
cmake/: FindCg.cmake  FindDirectShow.cmake  FindGLEW.cmake  FindOpenMP.cmake
crawler/: CMakeLists.txt  crawler.cpp  pic_randomizer.cpp  pic_randomizer.h
data/: README.txt  clean  polyora.js  polyora_state_machine.js  scenegraph.js  swissair_happy_512_512.dds  videosource.ini
data/papillon_def/: frame000.dds  frame001.dds  frame002.dds  frame003.dds  frame004.dds  frame005.dds  frame006.dds  frame007.dds  frame008.dds  frame009.dds  frame010.dds  frame011.dds  frame012.dds  frame013.dds  frame014.dds  frame015.dds
data/train/basic/: train.sh
examples/: CMakeLists.txt
examples/simpletrack/: CMakeLists.txt  simpletrack.cpp
pca/: load_tracks.m  pca.m  project.m  save_mat.m
polyora/: CMakeLists.txt  adapt_thresh.cpp  adapt_thresh.h  bucket2d.h  camera.cpp  camera.h  distortion.cpp  distortion.h  fvec4.h  homography4.cpp  homography4.h  idcluster.cpp  idcluster.h  include_windows.h  keypoint.h  kmeantree.cpp  kmeantree.h  kpt.vcproj  kpttracker.cpp  kpttracker.h  matvec.h  mlist.h  mserdetector.cpp  mserdetector.h  mylkpyramid.cpp  mylkpyramid.h  patchtagger.cpp  patchtagger.h  pca_descriptor.cpp  pca_descriptor.h  polyora.h  pose.cpp  pose.h  preallocated.h  pyrimage.cpp  pyrimage.h  timer.cpp  timer.h  tracks.cpp  tracks.h  (+7 more)
qtpolyora/: CMakeLists.txt  glbox.cpp  ipltexture.cpp  main.cpp  qtkpt.vcproj  vsview.cpp  vsview.h
script/: CMakeLists.txt  CMakeLists.txt.autosave  homography.cpp  homography.h  polyora.js  sattachedpoint.cpp  sattachedpoint.h  scenegraph.js  script.cpp  script.h  sgraphics.cpp  sgraphics.h  shomography.cpp  shomography.h  smodel.cpp  smodel.h  smodel.h.autosave  spoint.cpp  spoint.h  spolyora_obj.h  spolyora_target.cpp  spolyora_target.h  stexture.cpp  stexture.h  stime.cpp  stime.h
track3d/: CMakeLists.txt  camera.cpp  camera.h  glbox.cpp  glbox.h  ipltexture.h  main.cpp  matvec.cpp  matvec.h  pose.cpp  pose.h  track3d_view.cpp  track3d_view.h
videosource/: CMakeLists.txt  bidirpipe.cpp  bidirpipe.h  bmpvideosource.cpp  bmpvideosource.h  dc1394vs.cpp  dc1394vs.h  dshowcb.cpp  dshowcb.h  dshowfile.cpp  dshowfile.h  flycapturevs.cpp  flycapturevs.h  iniparser.cpp  iniparser.h  mplayer.cpp  mplayer.h  opencv_vs.cpp  opencv_vs.h  stdafx.cpp  stdafx.h  videosource.cpp  videosource.h
videotrain/: CMakeLists.txt  videotrain.cpp
vobj_tracker/: .vobj_tracker_view.cpp.swp  CMakeLists.txt  glbox.cpp  glbox.h  ipltexture.cpp  ipltexture.h  main.cpp  vobj_tracker_view.cpp  vobj_tracker_view.h
