ADD_EXECUTABLE(buildtree buildtree.cpp)

ADD_DEPENDENCIES(buildtree polyora)

INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES(buildtree polyora ${OpenCV_LIBS} )
IF (SIFTGPU_FOUND)
	INCLUDE_DIRECTORIES( ${SIFTGPU_INCLUDE_DIRS} )
	TARGET_LINK_LIBRARIES(buildtree ${SIFTGPU_LIBRARY} ${OPENGL_LIBRARIES} )
ENDIF (SIFTGPU_FOUND)

INSTALL(TARGETS buildtree RUNTIME DESTINATION bin COMPONENT tools)
