SET(EXECUTABLE cluster_ids)
ADD_EXECUTABLE(${EXECUTABLE} cluster_ids.cpp)

ADD_DEPENDENCIES(${EXECUTABLE} polyora)

INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES(${EXECUTABLE} polyora ${OpenCV_LIBS} )
IF (SIFTGPU_FOUND)
	INCLUDE_DIRECTORIES( ${SIFTGPU_INCLUDE_DIRS} )
	TARGET_LINK_LIBRARIES(${EXECUTABLE} ${SIFTGPU_LIBRARY} ${OPENGL_LIBRARIES} )
ENDIF (SIFTGPU_FOUND)

INSTALL(TARGETS cluster_ids RUNTIME DESTINATION bin COMPONENT tools)
