SET(EXECUTABLE simpletrack)
ADD_EXECUTABLE(${EXECUTABLE} simpletrack.cpp)

ADD_DEPENDENCIES(${EXECUTABLE} polyora)

INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES(${EXECUTABLE} polyora ${OpenCV_LIBS} )
IF (SIFTGPU_FOUND)
	INCLUDE_DIRECTORIES( ${SIFTGPU_INCLUDE_DIRS} )
	TARGET_LINK_LIBRARIES(${EXECUTABLE} ${SIFTGPU_LIBRARIES} )
ENDIF (SIFTGPU_FOUND)

